--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -7,34 +7,30 @@ $white: #fff;
 $black: #000;
 $yellow: rgba(255, 238, 0, 0.75);
 
-$font-bold: 'Pirata One';
-$font-text: 'Lato';
+$font-bold: "Pirata One";
+$font-text: "Lato";
 
-*, *::after, *::before {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
 }
 
 .sr-only {
-  clip: rect(0 0 0 0); 
+  clip: rect(0 0 0 0);
   clip-path: inset(50%);
   height: 1px;
   overflow: hidden;
   position: absolute;
-  white-space: nowrap; 
+  white-space: nowrap;
   width: 1px;
 }
 
-body {
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
-  font-family: $font-text;
-  font-size: 16px;
-  line-height: 1.8;
-  scroll-behavior: smooth;
-}
-
-.h1, .h2, .h3, .h4, .h5 {
+.h1,
+.h2,
+.h3,
+.h4,
+.h5 {
   margin: 0;
   line-height: 1.4;
   font-family: $font-bold;
@@ -82,6 +78,7 @@ ul {
 }
 
 /* Handle */
-::-webkit-scrollbar-thumb, ::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb,
+::-webkit-scrollbar-thumb:hover {
   background: $black;
 }
